@@ -1,3 +1,8 @@
+2009-02-06  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-ip4.c
+		- (method_changed): disable "DHCP Client ID" entry for VPN connections
+
 2009-02-05  Dan Williams  <dcbw@redhat.com>
 
 	* nm-applet.conf
